ark of elements left click attack animation

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -4657,7 +4657,7 @@
   item: DIAMOND_SWORD
   lore:
   - §#DC143C左键进行一次五连斩，斩击以掷出剑刃结束
-  - §#DC143C剑刃掷出后会进行一次剪击，造成额外伤害并获得2层充能
+  - §#DC143C剑刃掷出后会进行一次造成额外伤害的剪击
   - §#FFA403右键用剑刃向前方剪出
   - §#FFA403剑刃击中敌人时会进行招架，并使你短暂无敌
   - §#FFA403你也可以用剑刃格挡弹幕，并短暂使其伤害造成的伤害减少200点
@@ -4815,7 +4815,7 @@
   item: DIAMOND_SWORD
   lore:
   - §#DC143C左键进行一次五连斩，斩击以掷出剑刃结束
-  - §#DC143C剑刃掷出后会进行一次剪击，造成额外伤害并获得2层充能
+  - §#DC143C剑刃掷出后会进行一次造成额外伤害的剪击
   - §#FFA403右键用剑刃向前方剪出
   - §#FFA403剑刃击中敌人时会进行招架，并使你短暂无敌
   - §#FFA403你也可以用剑刃格挡弹幕，并短暂使其伤害造成的伤害减少200点
