--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/weapons.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/weapons.yml
@@ -1104,6 +1104,21 @@
     useTime: 5
     useSpeedMulti: 1
     useSpeedMeleeMulti: 1
+元素方舟:
+  type: SWING
+  autoSwing: true
+  size: 8
+  attributes:
+    useTime: 7
+    useSpeedMulti: 1
+    useSpeedMeleeMulti: 1
+元素方舟_RIGHT_CLICK:
+  type: STAB
+  size: 9
+  attributes:
+    useTime: 5
+    useSpeedMulti: 1
+    useSpeedMeleeMulti: 1
 木弓:
   type: BOW
 钨钢弓:
