--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -4641,7 +4641,7 @@
   lore:
   - §#6495ED右键向前延展方舟，此技能有10秒的冷却时间
   - §#6495ED剑刃击中敌人时会进行招架，并使你短暂获得近战无敌帧
-  - §#6495ED你也可以用剑刃格挡弹幕，使其伤害减少320点
+  - §#6495ED你也可以用剑刃格挡弹幕，使其伤害减少300点
   - §#6495ED格挡后会获得10层充能，充能会让剑刃能够发射更加强大的弹幕
   - §r锻造出来征服一切邪恶的神圣之刃
   - §r“并不能触发时空断裂”
@@ -4659,9 +4659,9 @@
   - §#DC143C左键进行一次五连斩，斩击以掷出剑刃结束
   - §#DC143C剑刃掷出后会进行一次造成额外伤害的剪击
   - §#FFA403右键用剑刃向前方剪出
-  - §#FFA403剑刃击中敌人时会进行招架，并使你短暂无敌
-  - §#FFA403你也可以用剑刃格挡弹幕，并短暂使其伤害造成的伤害减少200点
-  - §#FFA403格挡后会获得10层充能，充能会强化普通攻击，让你可以同时使用两把剑刃
+  - §#FFA403剑刃击中敌人时会进行招架，并使你获得近战无敌帧
+  - §#FFA403你也可以用剑刃格挡弹幕，并短暂使其伤害造成的伤害减少350点
+  - §#FFA403格挡后会获得11层充能，充能会强化普通攻击，让你可以同时使用两把剑刃
   - §r一对注入了泰拉大陆精华的天赐之刃，其威力足以切割现实的结构
   attributes:
     damage: 1200
@@ -4817,9 +4817,9 @@
   - §#DC143C左键进行一次五连斩，斩击以掷出剑刃结束
   - §#DC143C剑刃掷出后会进行一次造成额外伤害的剪击
   - §#FFA403右键用剑刃向前方剪出
-  - §#FFA403剑刃击中敌人时会进行招架，并使你短暂无敌
-  - §#FFA403你也可以用剑刃格挡弹幕，并短暂使其伤害造成的伤害减少200点
-  - §#FFA403格挡后会获得10层充能，充能会强化普通攻击，让你可以同时使用两把剑刃
+  - §#FFA403剑刃击中敌人时会进行招架，并使你获得近战无敌帧
+  - §#FFA403你也可以用剑刃格挡弹幕，并短暂使其伤害造成的伤害减少400点
+  - §#FFA403格挡后会获得11层充能，充能会强化普通攻击，让你可以同时使用两把剑刃
   - §r“你的旅程的物理顶点，拥有着能使神明§m笑嘻§r分崩离析的力量”
   attributes:
     damage: 4000
