galaxy weapon attack method

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -4706,7 +4706,7 @@
     damageType: Melee
     crit: 4
     knockback: 9.75
-    useTime: 19
+    useTime: 40
     buffInflictMelee: 弑神怒焰|100|1
   worth: 28000000
   rarity: 14
@@ -4716,12 +4716,13 @@
   - §#FF5700回旋挥舞银河，随时间加速
   - §#FF5700旋转的星云将持续释放银河之雷
   - §#4C89ED攻击时召唤能削弱敌怪的星环
-  - §#4C89ED星环会离你而去，逐渐变慢
+  - §#4C89ED星环会追踪敌怪
   - §r寰宇自在，毋需调谐
   - §r全部环境调谐已存在其中
   - §r潜行时鼠标右键切换当前调谐
+  - §r“转圈圈咯~”
   attributes:
-    damage: 1600
+    damage: 3000
     damageType: Melee
     crit: 4
     knockback: 9
@@ -4731,13 +4732,13 @@
 银河[白羊之怒]:
   item: DIAMOND_SWORD
   lore:
-  - §#CB61BF将银河掷向目标位置，以群星将其拉住
-  - §#CB61BF击中敌人释放银河之雷
+  - §#CB61BF将银河掷向目标位置，击中敌人释放银河之雷
   - §#4C89ED攻击时召唤能削弱敌怪的星环
-  - §#4C89ED星环会离你而去，逐渐变慢
+  - §#4C89ED星环会追踪敌怪
   - §r寰宇自在，毋需调谐
   - §r全部环境调谐已存在其中
   - §r潜行时鼠标右键切换当前调谐
+  - §r“很好的索敌，使我的银河旋转”
   attributes:
     damage: 1900
     damageType: Melee
@@ -4749,11 +4750,10 @@
 银河[北斗之眸]:
   item: DIAMOND_SWORD
   lore:
-  - §#80BDFF引导北极星之力，化为星环簇拥的星系能量旋涡
-  - §#80BDFF随着时间流逝或击中敌怪，旋涡将逐渐成长
-  - §#80BDFF此后再次攻击，你将追随北极星的步伐高速冲刺，并化身超新星爆发，四散银河之雷
+  - §#80BDFF引导北极星之力，随着时间流逝或击中敌怪，剑刃将逐渐成长
+  - §#80BDFF右键攻击尝试消耗剑刃充能释放冲刺，在击中时治疗并弹开自身
   - §#CB1977攻击时在身旁召唤吸取敌怪生命的星环
-  - §#CB1977星环会朝你飞去，逐渐变慢
+  - §#CB1977星环会追踪敌怪
   - §r寰宇自在，毋需调谐
   - §r全部环境调谐已存在其中
   - §r潜行时鼠标右键切换当前调谐
@@ -4768,15 +4768,16 @@
 银河[仙女之跃]:
   item: DIAMOND_SWORD
   lore:
-  - §#8480FF左键释放抹杀神明的冲锋，击中时获得无敌帧，释放银河之雷且获得充能
-  - §#8480FF撞击地面消耗所有充能，使得寰宇崩塌，时空撕裂，末世风暴般的宇宙能量轰鸣而至
+  - §#8480FF左键攻击时持续获得充能
+  - §#8480FF在拥有至少一半充能时右键释放抹杀神明的冲锋，击中时获得无敌帧，释放银河之雷
+  - §#8480FF此时撞击地面消耗所有充能，使得寰宇崩塌，时空撕裂，末世风暴般的宇宙能量轰鸣而至
   - §#CB1977攻击时在身旁召唤吸取敌怪生命的星环
-  - §#CB1977星环会朝你飞去，逐渐变慢
+  - §#CB1977星环会追踪敌怪
   - §r寰宇自在，毋需调谐
   - §r全部环境调谐已存在其中
   - §r潜行时鼠标右键切换当前调谐
   attributes:
-    damage: 2000
+    damage: 4000
     damageType: Melee
     crit: 4
     knockback: 9
@@ -4802,7 +4803,7 @@
   lore:
   - §r召唤巨量燃烧陨石从天而降
   - §r天降正义！
-  - §r“你怎么穿着法师的贴图，还用人家攻击方式”
+  - §r“你怎么穿着法杖的贴图，还用人攻击方式”
   attributes:
     damage: 295
     damageType: Melee
