--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -1992,9 +1992,9 @@
   - §r广大泰拉玩家的精神结晶
   - §r在最早时期你会获得多个属性的少量增幅
   - §r击败特定BOSS后增幅更加强力，这些BOSS包括：
-  - §r克苏鲁之眼，腐巢意志，史莱姆之神，血肉之墙
-  - §r极地之灵，硫磺火元素，世纪之花，光之女皇，星神游龙，月球领主
-  - §7(敬请期待) 亵渎天神，神明吞噬者，丛林龙，星流巨械，至尊灾厄
+  - §a克苏鲁之眼，腐巢意志，史莱姆之神，血肉之墙
+  - §d极地之灵，硫磺火元素，世纪之花，光之女皇，星神游龙，月球领主
+  - §c亵渎天神，神明吞噬者，丛林龙，星流巨械，至尊灾厄
   - §r感谢众多支持者的努力，让泰拉瑞亚以及灾厄成为现实
   worth: 12000000
   rarity: 1000
@@ -3442,7 +3442,7 @@
   - §r充能将用作强化左键攻击，满充能时本次攻击在命中敌人时爆炸
   - §r“嘉登喷流之刃”
   attributes:
-    damage: 1650
+    damage: 1830
     damageType: Melee
     crit: 4
     knockback: 9
@@ -4661,14 +4661,14 @@
   - §#FFA403右键用剑刃向前方剪出
   - §#FFA403剑刃击中敌人时会进行招架，并使你获得近战无敌帧
   - §#FFA403你也可以用剑刃格挡弹幕，并短暂使其伤害造成的伤害减少350点
-  - §#FFA403格挡后会获得11层充能，充能会强化普通攻击，让你可以同时使用两把剑刃
+  - §#FFA403格挡后会获得16层充能，充能会强化普通攻击，让你可以同时使用两把剑刃
   - §r一对注入了泰拉大陆精华的天赐之刃，其威力足以切割现实的结构
   attributes:
     damage: 1200
     damageType: Melee
     crit: 14
     knockback: 8.5
-    useTime: 20
+    useTime: 21
   worth: 22000000
   rarity: 11
 死神擢升:
@@ -4787,7 +4787,7 @@
 巨龙之怒:
   item: DIAMOND_SWORD
   lore:
-  - §r旋转武器，命中敌怪时产生爆炸
+  - §r旋转武器，命中敌怪时产生爆炸火球
   - §r“石猴出世”
   attributes:
     damage: 2150
@@ -4820,20 +4820,20 @@
   - §#FFA403右键用剑刃向前方剪出
   - §#FFA403剑刃击中敌人时会进行招架，并使你获得近战无敌帧
   - §#FFA403你也可以用剑刃格挡弹幕，并短暂使其伤害造成的伤害减少400点
-  - §#FFA403格挡后会获得11层充能，充能会强化普通攻击，让你可以同时使用两把剑刃
+  - §#FFA403格挡后会获得16层充能，充能会强化普通攻击，让你可以同时使用两把剑刃
   - §r“你的旅程的物理顶点，拥有着能使神明§m笑嘻§r分崩离析的力量”
   attributes:
-    damage: 4000
+    damage: 5000
     damageType: Melee
     crit: 19
     knockback: 9.5
-    useTime: 15
+    useTime: 21
   worth: 30000000
   rarity: 15
 恣睢:
   item: DIAMOND_SWORD
   lore:
-  - §r掷出会在你鼠标附近旋转的硫火三叉戟，撕裂你的敌人
+  - §r掷出在目标处旋转的硫火三叉戟，撕裂你的敌人
   attributes:
     damage: 888
     damageType: Melee
